add chillax forest scene in webp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Battle of Alesia</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+SC"/>
+		<link rel="stylesheet" href="node_modules/chillax/dist/chillax-styles.css"/>
 		<link rel="stylesheet" href="dist/style.css"/>
 	</head>
 	<body>
@@ -21,6 +22,15 @@
 				</a>
 			</h2>
 		</header>
+
+		<div data-chillax>
+			<img data-chillax-layer=10 src="images/forest/forest-1.webp" alt=""/>
+			<img data-chillax-layer="8" src="images/forest/forest-2.webp" alt=""/>
+			<img data-chillax-layer="6" src="images/forest/forest-3.webp" alt=""/>
+			<img data-chillax-layer="4" src="images/forest/forest-4.webp" alt=""/>
+			<img data-chillax-layer="2" src="images/forest/forest-5.webp" alt=""/>
+			<img data-chillax-layer="0" src="images/forest/forest-6.webp" alt=""/>
+		</div>
 
 		<section>
 			<h1>VERCINGETORIX has risen to power in Free Gaul</h1>
