add 'work-in-progress' notes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<span>The Battle of Alesia</span>
 				<span>Based on the word of <strong>Julius Caesar</strong></span>
 			</h1>
-			<h2></h2>
+			<h2>(Work in Progress)</h2>
 			<h2>Illustration by <a href="http://loonietoon.github.io/">Lonnie Ralfs</a></h2>
 			<h2>Narration by <a href="http://chasemoskal.com/">Chase Moskal</a></h2>
 			<h2>
@@ -67,6 +67,7 @@
 
 		<section>
 			<h1>CAESAR doubles down on the siege works</h1>
+			<h2>[... more coming soon! ...]</h2>
 		</section>
 
 		<script src="dist/main.bundle.js"></script>
